--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.7.0",
     "@babel/runtime": "^7.25.6",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/storage": "^1.2.5",
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.11.1",
